--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
+    "@searchkit/client": "^3.0.0-canary.41",
+    "graphql": "^15.5.1",
     "next": "11.1.0",
+    "next-with-apollo": "^5.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
