--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.8",
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^37.2.0",
     "@searchkit/client": "^3.0.0-canary.41",
+    "@searchkit/elastic-ui": "^3.0.0-canary.41",
     "graphql": "^15.5.1",
+    "moment": "^2.29.1",
     "next": "11.1.0",
     "next-with-apollo": "^5.2.1",
     "react": "17.0.2",
